--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -19,25 +19,23 @@
 % Author: ___________________________________________________________________  %
 % Institution: ______________________________________________________________  %
 % Date: __________                                                             %
-% File Version 5.0.0 "Raven"                                                   %
+% File Version 7.0.5 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Physical governing equations (EULER, NAVIER_STOKES,
-%                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
-%                               POISSON_EQUATION)
-PHYSICAL_PROBLEM= NAVIER_STOKES
+% Solver type (EULER, NAVIER_STOKES, RANS,
+%                               INC_EULER, INC_NAVIER_STOKES, INC_RANS
+%                               FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
+%                               HEAT_EQUATION_FVM, ELASTICITY)
+SOLVER =  NAVIER_STOKES
 %
 % Specify turbulence model (NONE, SA, SA_NEG, SST)
 KIND_TURB_MODEL= NONE
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
 MATH_PROBLEM= DIRECT
-%
-% Regime type (COMPRESSIBLE, INCOMPRESSIBLE)
-REGIME_TYPE= COMPRESSIBLE
 %
 % Axisymmetric simulation, only compressible flows (NO, YES)
 AXISYMMETRIC= NO
@@ -114,8 +112,6 @@ TARGET_CL= 0.80
 % Estimation of dCL/dAlpha (0.2 per degree by default)
 DCL_DALPHA= 0.2
 %
-% Number of times the AoA is updated in a fix CL problem (5 by default)
-UPDATE_ALPHA= 5
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
@@ -187,21 +183,24 @@ KT_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
+% Time domain simulation
+TIME_DOMAIN = YES
+%
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
 %                      DUAL_TIME_STEPPING-2ND_ORDER, HARMONIC_BALANCE)
-UNSTEADY_SIMULATION= DUAL_TIME_STEPPING-2ND_ORDER
+TIME_MARCHING = DUAL_TIME_STEPPING-2ND_ORDER
 %
 % Time Step for dual time stepping simulations (s) -- Only used when UNST_CFL_NUMBER = 0.0
-UNST_TIMESTEP= 0.0025
+TIME_STEP = 0.0025
 %
 % Total Physical Time for dual time stepping simulations (s)
-UNST_TIME= 20.0
+MAX_TIME = 20.0
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
 %
 % Number of internal iterations (dual time method)
-UNST_INT_ITER= 200
+INNER_ITER = 200
 %UNST_INT_ITER= 5
 %
 % Iteration number to begin unsteady restarts
@@ -209,61 +208,49 @@ UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
-% Dynamic mesh simulation (NO, YES)
-GRID_MOVEMENT= YES
+% Use the reformatted pseudo-elastic solver for grid deformation
+DEFORM_MESH= YES
 %
-% Type of dynamic mesh (NONE, RIGID_MOTION, DEFORMING, ROTATING_FRAME,
-%                       MOVING_WALL, STEADY_TRANSLATION, FLUID_STRUCTURE,
-%                       AEROELASTIC, ELASTICITY, EXTERNAL,
-%                       AEROELASTIC_RIGID_MOTION, GUST)
-GRID_MOVEMENT_KIND= FLUID_STRUCTURE
+% Moving markers which deform the mesh
+MARKER_DEFORM_MESH = ( movingWall )
+%
+MARKER_FLUID_LOAD = ( movingWall )
+%
+% Type of dynamic mesh (NONE, RIGID_MOTION, ROTATING_FRAME,
+%                       STEADY_TRANSLATION,
+%                       ELASTICITY, GUST)
+GRID_MOVEMENT = NONE
 %
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
 % with the Reynolds number and for computing force coeffs. with dynamic meshes.
 MACH_MOTION= 0.2
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-MARKER_MOVING= ( movingWall )
+MARKER_MOVING= ( NONE )
 %
 % Coordinates of the motion origin
-MOTION_ORIGIN_X= 0.0
-MOTION_ORIGIN_Y= 0.0
-MOTION_ORIGIN_Z= 0.0
+MOTION_ORIGIN= 0.0 0.0 0.0
 %
 % Angular velocity vector (rad/s) about the motion origin
-ROTATION_RATE_X = 0.0
-ROTATION_RATE_Y = 0.0
-ROTATION_RATE_Z = 0.0
+ROTATION_RATE = 0.0 0.0 0.0
 %
 % Pitching angular freq. (rad/s) about the motion origin
-PITCHING_OMEGA_X= 0.0
-PITCHING_OMEGA_Y= 0.0
-PITCHING_OMEGA_Z= 0.0
+PITCHING_OMEGA = 0.0 0.0 0.0
 %
 % Pitching amplitude (degrees) about the motion origin
-PITCHING_AMPL_X= 0.0
-PITCHING_AMPL_Y= 0.0
-PITCHING_AMPL_Z= 0.0
+PITCHING_AMPL = 0.0 0.0 0.0
 %
 % Pitching phase offset (degrees) about the motion origin
-PITCHING_PHASE_X= 0.0
-PITCHING_PHASE_Y= 0.0
-PITCHING_PHASE_Z= 0.0
+PITCHING_PHASE = 0.0 0.0 0.0
 %
 % Translational velocity (m/s) in the x, y, & z directions
-TRANSLATION_RATE_X = 0.0
-TRANSLATION_RATE_Y = 0.0
-TRANSLATION_RATE_Z = 0.0
+TRANSLATION_RATE = 0.0 0.0 0.0
 %
 % Plunging angular freq. (rad/s) in x, y, & z directions
-PLUNGING_OMEGA_X= 0.0
-PLUNGING_OMEGA_Y= 0.0
-PLUNGING_OMEGA_Z= 0.0
+PLUNGING_OMEGA = 0.0 0.0 0.0
 %
 % Plunging amplitude (m) in x, y, & z directions
-PLUNGING_AMPL_X= 0.0
-PLUNGING_AMPL_Y= 0.0
-PLUNGING_AMPL_Z= 0.0
+PLUNGING_AMPL = 0.0 0.0 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
 MOVE_MOTION_ORIGIN = 1
@@ -300,9 +287,6 @@ MARKER_INTERNAL= ( NONE )
 %
 % Near-Field boundary marker(s) (NONE = no marker)
 MARKER_NEARFIELD= ( NONE )
-%
-% Zone interface boundary marker(s) (NONE = no marker)
-MARKER_INTERFACE= ( NONE )
 %
 % Inlet boundary type (TOTAL_CONDITIONS, MASS_FLOW)
 INLET_TYPE= TOTAL_CONDITIONS
@@ -371,12 +355,6 @@ MARKER_NORMAL_DISPL= ( NONE )
 % Pressure boundary marker(s) (NONE = no marker)
 % Format: ( pressure marker )
 MARKER_PRESSURE= ( NONE )
-%
-% Neumann bounday marker(s) (NONE = no marker)
-MARKER_NEUMANN= ( NONE )
-%
-% Dirichlet boundary marker(s) (NONE = no marker)
-MARKER_DIRICHLET= ( NONE )
 %
 % Riemann boundary marker(s) (NONE = no marker)
 % Format: (marker, data kind flag, list of data)
@@ -582,9 +560,6 @@ CONV_NUM_METHOD_FLOW= JST
 %
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
-%
-% Relaxation coefficient
-RELAXATION_FACTOR_FLOW= 1.0
 
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
@@ -596,9 +571,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 %
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
-%
-% Relaxation coefficient
-RELAXATION_FACTOR_TURB= 1.0
 
 % --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
 %
@@ -614,7 +586,7 @@ DEFORM_LINEAR_SOLVER= FGMRES
 DEFORM_LINEAR_SOLVER_PREC= ILU
 %
 % Number of smoothing iterations for mesh deformation
-DEFORM_LINEAR_ITER= 500
+DEFORM_LINEAR_SOLVER_ITER = 500
 %
 % Number of nonlinear deformation iterations (surface deformation increments)
 DEFORM_NONLINEAR_ITER= 3
@@ -646,32 +618,26 @@ VISUALIZE_VOLUME_DEF= NO
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-EXT_ITER= 999999
+OUTER_ITER = 999999
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
 CONV_CRITERIA= RESIDUAL
 %
-% Residual reduction (order of magnitude with respect to the initial value)
-RESIDUAL_REDUCTION= 6
-%
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -11
+CONV_RESIDUAL_MINVAL = -11
 %
 % Start convergence criteria at iteration number
-STARTCONV_ITER= 10
+CONV_STARTITER = 10
 %
 % Number of elements to apply the criteria
-CAUCHY_ELEMS= 20
+CONV_CAUCHY_ELEMS = 20
 %
 % Epsilon to control the series convergence
-CAUCHY_EPS= 1E-6
+CONV_CAUCHY_EPS = 1E-6
 %
 % Direct function to apply the convergence criteria (LIFT, DRAG, NEARFIELD_PRESS)
-CAUCHY_FUNC_FLOW= LIFT
-%
-% Adjoint function to apply the convergence criteria (SENS_GEOMETRY, SENS_MACH)
-CAUCHY_FUNC_ADJFLOW= SENS_GEOMETRY
+CONV_FIELD = LIFT
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
@@ -685,14 +651,21 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FLOW_FILENAME= restart_flow.dat
+SOLUTION_FILENAME = restart_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
-% Output file format (TECPLOT, TECPLOT_BINARY, PARAVIEW,
-%                     FIELDVIEW, FIELDVIEW_BINARY)
-OUTPUT_FORMAT= TECPLOT_BINARY
+% Output tabular file format (TECPLOT, CSV)
+TABULAR_FORMAT = TECPLOT
+%
+%
+% Files to output 
+% Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
+%  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
+%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
+% default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
+OUTPUT_FILES = (RESTART, TECPLOT, SURFACE_TECPLOT)
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
@@ -701,13 +674,13 @@ CONV_FILENAME= history
 BREAKDOWN_FILENAME= forces_breakdown.dat
 %
 % Output file restart flow
-RESTART_FLOW_FILENAME= restart_flow.dat
+RESTART_FILENAME = restart_flow.dat
 %
 % Output file restart adjoint
 RESTART_ADJ_FILENAME= restart_adj.dat
 %
 % Output file flow (w/o extension) variables
-VOLUME_FLOW_FILENAME= flow
+VOLUME_FILENAME = flow
 %
 % Output file adjoint (w/o extension) variables
 VOLUME_ADJ_FILENAME= adjoint
@@ -719,7 +692,7 @@ VALUE_OBJFUNC_FILENAME= of_eval.dat
 GRAD_OBJFUNC_FILENAME= of_grad.dat
 %
 % Output file surface flow coefficient (w/o extension)
-SURFACE_FLOW_FILENAME= surface_flow
+SURFACE_FILENAME = surface_flow
 %
 % Output file surface adjoint coefficient (w/o extension)
 SURFACE_ADJ_FILENAME= surface_adjoint
@@ -747,12 +720,6 @@ WRT_SHARPEDGES= NO
 %
 % Output the solution at each surface in the history file
 WRT_SURFACE= NO
-%
-% Minimize the required output memory
-LOW_MEMORY_OUTPUT= NO
-%
-% Verbosity of console output: NONE removes minor MPI overhead (NONE, HIGH)
-CONSOLE_OUTPUT_VERBOSITY= HIGH
 %
 % Write binary restart files (YES, NO)
 WRT_BINARY_RESTART= YES
