--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ ENDIF()
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Modal)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM3D_Metafor)
 IF(NOT WIN32)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
