--- a/tests/SU2_pyBeam/staticOnera_fluid.cfg
+++ b/tests/SU2_pyBeam/staticOnera_fluid.cfg
@@ -19,13 +19,6 @@ MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
 RESTART_SOL= NO
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART= NO
-%
-% Read binary restart files (YES, NO)
-READ_BINARY_RESTART= NO
-%
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
@@ -300,10 +293,10 @@ SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
 % Writing solution frequency
-WRT_SOL_FREQ= 100
+OUTPUT_WRT_FREQ= 100
 %
 % Writing convergence history frequency
-WRT_CON_FREQ= 1
+SCREEN_WRT_FREQ_INNER= 1
 %
 % Screen output fields
 SCREEN_OUTPUT = (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
@@ -371,12 +364,6 @@ DEFORM_LINEAR_SOLVER_ERROR= 1E-14
 % Type of element stiffness imposed for FEA mesh deformation (INVERSE_VOLUME, 
 %                                          WALL_DISTANCE, CONSTANT_STIFFNESS)
 DEFORM_STIFFNESS_TYPE= INVERSE_VOLUME
-%
-% Visualize the surface deformation (NO, YES)
-VISUALIZE_SURFACE_DEF= NO
-%
-% Visualize the volume deformation (NO, YES)
-VISUALIZE_VOLUME_DEF= NO
 
 % -------------------- FREE-FORM DEFORMATION PARAMETERS -----------------------%
 %
