--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -200,7 +200,7 @@ MAX_TIME = 20.0
 UNST_CFL_NUMBER= 0.0
 %
 % Number of internal iterations (dual time method)
-INNER_ITER = 200
+INNER_ITER = 500
 %UNST_INT_ITER= 5
 %
 % Iteration number to begin unsteady restarts
@@ -615,7 +615,6 @@ DEFORM_LIMIT = 1E6
 TIME_ITER = 999999
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
-%
 CONV_CRITERIA= RESIDUAL
 %
 % Min value of the residual (log10 of the residual)
@@ -634,6 +633,9 @@ CONV_CAUCHY_EPS = 1E-6
 CONV_FIELD = LIFT
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
+%
+% Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
+SCREEN_OUTPUT= (INNER_ITER, TIME_ITER, CAUCHY_LIFT, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, LIFT, DRAG)
 %
 % Mesh input file
 MESH_FILENAME= ../../tests/SU2_Metafor/models/CantileverSquareChannel_BGS_parallel_fluidMesh.su2
