--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -440,11 +440,11 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 5.0
 %
 % Adaptive CFL number (NO, YES)
-CFL_ADAPT= NO
+CFL_ADAPT= YES
 %
 % Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
 %                                        CFL max value )
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.25, 50.0 )
+CFL_ADAPT_PARAM= ( 0.5, 1.5, 1.25, 50.0 )
 %
 % Maximum Delta Time in local time stepping simulations
 MAX_DELTA_TIME= 1E6
