--- a/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
+++ b/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
@@ -204,7 +204,7 @@ UNST_CFL_NUMBER= 0.0
 INNER_ITER = 500
 %
 % Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
+RESTART_ITER= 2
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
